syntax = "proto3";

package product.service.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "api/product/v1;v1";

service ProductCatalogService {
  rpc CreateProduct(CreateProductRequest) returns (ProductReply) {
    option (google.api.http) = {
      post: "/v1/product",
      body: "*"
    };
  }
  rpc UpdateProduct(UpdateProductRequest) returns (ProductReply) {
    option (google.api.http) = {
      patch: "/v1/product",
      body: "*"
    };
  }
  rpc ListProducts(ListProductsReq) returns (ListProductsResp) {
    option (google.api.http) = {
      get: "/v1/product/list"
    };
  }
  rpc GetProduct(GetProductReq) returns (ProductReply) {
    option (google.api.http) = {
      get: "/v1/product/{id}"
    };
  }
  rpc SearchProducts(SearchProductsReq) returns (SearchProductsResp) {
    option (google.api.http) = {
      get: "/v1/product/search/{query}"
    };
  }
  rpc DeleteProduct (DeleteProductReq) returns (ProductReply){
    option (google.api.http) = {
      delete:"/v1/product"
    };
  }

  rpc ListCategories (google.protobuf.Empty) returns (ListCategoriesResp){
    option (google.api.http) = {
      get:"/v1/categories/tree"
    };
  }
  rpc CreateCategory (CreateCategoryReq) returns (CategoryReply){
    option (google.api.http) = {
      post:"/v1/categories"
      body:"*"
    };
  }
  rpc GetCategoryChildren(GetCategoryChildrenReq) returns (GetCategoryChildrenResp){
    option (google.api.http) = {
      get:"/v1/categories/children/{id}"
    };
  }
}

message CreateCategoryReq {
  string name = 1;
  int32 parentId = 3;
}

message CategoryReply {
  Category category = 1;
}

message ListCategoriesResp {
  repeated Category categories = 1;
}

message GetCategoryChildrenReq {
  int32 id = 1;
}

message GetCategoryChildrenResp {
  repeated Category categories = 1;
}

message Category {
  int32 id = 1;
  string name = 2;
  int32 parentId = 4;
  repeated Category children = 5;
  google.protobuf.Timestamp createdAt = 6;
  bool isActive = 7;
}

message Product {
  uint32 id = 1;
  string name = 2;
  string description = 3;
  string picture = 4;
  float price = 5;

  repeated int32 categoryId = 6;

  int32 totalStock = 7;
  int32 availableStock = 8;
  int32 reservedStock = 9;
  int32 lowStockThreshold = 10;
  bool allowNegative = 11;
  google.protobuf.Timestamp createdAt = 12;
  google.protobuf.Timestamp updatedAt = 13;
  int32 version = 14;
}
// message Product {
//   string name = 1 [(google.api.field_behavior) = REQUIRED];
//   string description = 2 [(google.api.field_behavior) = REQUIRED];
//   string picture = 3 [(google.api.field_behavior) = REQUIRED];
//   float price = 4 [(google.api.field_behavior) = REQUIRED];
//   repeated string categories = 5 [(google.api.field_behavior) = REQUIRED];
//   string owner = 6 [(google.api.field_behavior) = REQUIRED];
//   string username = 7 [(google.api.field_behavior) = REQUIRED];
//   uint32 id = 8;
// }


message CreateProductRequest {
  string name = 3;
  string description = 4;
  string picture = 5;
  float price = 6;
  repeated int32 categoryId = 7;
  int32 totalStock = 8;
}

message UpdateProductRequest {
  uint32 id = 1;
  string name = 2;
  string description = 3;
  string picture = 4;
  float price = 5;
  repeated int32 categoryId = 6;
  int32 totalStock = 7;
}

message ProductReply {
  Product product = 1 ;
}

message ListProductsReq{
  int32 page = 1;
  int64 pageSize = 2 [json_name = "page_size"];

  int32 categoryId = 3 [json_name = "category_id"];
}

message ListProductsResp {
  repeated Product products = 1;
}

message GetProductReq {
  uint32 id = 1;
}

message SearchProductsReq {
  string query = 1;
}

message SearchProductsResp {
  repeated Product results = 1;
}

message DeleteProductReq {
  uint32 id = 1 ;
}

